--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,21 @@
-body, html {
+body {
   font-family: "Roboto", sans-serif;
-  background: lightgrey;
-  height: 100%;
+  background-color: #efefef;
 }
 
 #main {
   display: flex;
   height: 100vh;
+  width: 100vw;
   justify-content: center;
   align-items: center;
+  font-weight: bold;
+  background-color: lightblue;
+}
+
+
+.logo {
+  margin-bottom: 100px;
+  font-weight: bolder;
+  text-decoration: line-through;
 }
